# kgx

./: .gitignore  README.md  Taskfile.yml  mise.toml  prompt.md  pyproject.toml
docs/: pack-spec.md
docs/ai-workflow/: index.html  styles.css  use-cases.html
docs/plans/: confluence-export-connector.md
docs/runbooks/: aws-ingestion-spike.md  confluence-export-to-pack.md
docs/superpowers/plans/: 2026-05-14-kgx-knowledge-packs-mvp.md
examples/fixtures/confluence-export-sample/: README.md
examples/fixtures/confluence-export-sample/ENG/: Runbook.md
examples/fixtures/minimal.kgpack/: capabilities.json  entities.jsonl  manifest.json  provenance.json  relationships.jsonl
examples/fixtures/minimal.kgpack/documents/: README.md
schemas/: kgpack-entity.schema.json  kgpack-manifest.schema.json  kgpack-relationship.schema.json
scripts/: aws_docs_spike.py  confluence_export_to_pack.py
src/kgx/cli/: __init__.py  main.py  pack.py
src/kgx/core/graph/: memory.py
src/kgx/core/pack/: editor.py  loader.py  model.py  serialize.py  validator.py  writer.py
src/kgx/core/search/: keyword.py
src/kgx/mcp/: __init__.py  __main__.py  paths.py  server.py
src/kgx/providers/: base.py
src/kgx/providers/aws/: prototype.py
tasks/: Taskfile.api.yml  Taskfile.gemini.yml  Taskfile.mcp.yml
tests/: test_aws_prototype_emit.py  test_bootstrap.py  test_cli.py  test_cli_pack.py  test_confluence_export_dir.py  test_graph_memory.py  test_keyword_search.py  test_mcp_paths.py  test_mcp_tools.py  test_pack_editor.py  test_pack_loader.py  test_validator.py
(+2 files in other folders)
