[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kgx"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "pydantic",
    "jsonschema",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
kgx = "kgx.cli.main:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
